Implement system tray icon and option for closing to system tray

--- a/App.config
+++ b/App.config
@@ -16,6 +16,9 @@
             <setting name="PixelPerModule" serializeAs="String">
                 <value>20</value>
             </setting>
+            <setting name="CloseToSystemTray" serializeAs="String">
+                <value>False</value>
+            </setting>
         </WinQuickQR.Properties.Settings>
     </userSettings>
 </configuration>
