--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="PixelPerModule" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">20</Value>
     </Setting>
+    <Setting Name="CloseToSystemTray" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
