Implement support for monitoring clipboard & showing quick QR

--- a/App.config
+++ b/App.config
@@ -17,7 +17,16 @@
                 <value>20</value>
             </setting>
             <setting name="CloseToSystemTray" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
+            </setting>
+            <setting name="MonitorClipboard" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="ShowQuickQRForURL" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="QuickQRTimeout" serializeAs="String">
+                <value>5</value>
             </setting>
         </WinQuickQR.Properties.Settings>
     </userSettings>
