--- a/WinQuickQR.csproj
+++ b/WinQuickQR.csproj
@@ -9,6 +9,7 @@
     <RootNamespace>WinQuickQR</RootNamespace>
     <AssemblyName>WinQuickQR</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+	<LangVersion>10.0</LangVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
